--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@ html, body {
     display: flex;
     flex-direction: column;
     height: 100%;
+    padding-bottom: 20px;
 }
 
 #details-table-container {
