feat: search not installed apps too

--- a/src/index.css
+++ b/src/index.css
@@ -151,3 +151,36 @@ td a:hover {
     font-size: 15px;
     vertical-align: top; 
 }
+
+.installed {
+    color: rgb(241, 241, 241);
+    font-weight: bold;
+}
+
+.not-installed {
+    color: rgb(117, 117, 117);
+    font-weight: normal;
+}
+
+#spinner {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: none; 
+}
+
+#spinner::after {
+    content: "";
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    border: 2px solid #aaa;
+    border-top-color: #000;
+    border-radius: 50%;
+    animation: spin 0.6s linear infinite;
+}
+
+@keyframes spin {
+    to { transform: rotate(360deg); }
+}
